# sense-hat-cli

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  sense-hat.cpp  sense-hat.hpp
